--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,2 +1,195 @@
 @import url(./reset.css);
 
+body{
+    background-color: #000000;
+}
+
+.banner{
+    height: 605px;
+    width: 1,400px;
+    background-image: url(../images/banner.png), linear-gradient( rgba(0, 0, 0, 0.6), rgba(49, 168, 221, 0.2), rgba(0, 0, 0, 0.6));
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 2px solid #31A8DD;
+
+}
+
+.banner-content{
+    text-align: center;
+    width: 510px;
+    height: 393px;
+}
+
+.logo img {
+    background-color: rgba(0, 0, 0, 0.2);
+    width: 248px;
+    height: 214px;
+    border-radius: 50%;
+    padding: 10px;
+    margin-bottom: 10px;
+}
+
+h1{
+    font-family: "Raleway", sans-serif;
+    font-size: 40px;
+    font-weight: 900;
+    background: linear-gradient(#33A8DB,#1472B7 );
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-bottom: 20px;
+    text-transform: uppercase;
+
+}
+
+.banner-content p{
+    font-family: "Raleway", sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    color: #ffffff;
+    margin-bottom: 10px;
+
+}
+
+.banner-content button{
+    font-family: "Raleway", sans-serif;
+    font-size: 16px;
+    font-weight: 900;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+    color: #31A8DD;
+    width: 326px;
+    height: 57px;
+    background: linear-gradient(#3BA1CD, #1572B7);
+    -webkit-background-clip: text;
+    border: 2px solid transparent;
+    border-image: linear-gradient(#3BA1CD, #1572B7);
+    border-image-slice: 10;
+}
+
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#course-content{
+    margin-top: 50px;
+    width: 792px;
+    height: 500px;
+}
+
+#course-content h2{
+    font-family: "Raleway", sans-serif;
+    font-size: 32px;
+    color:#33A8DB;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    font-weight: 700;
+}
+
+#course-content p{
+    margin: 10px;
+    text-align: center;
+    color: #ffffff;
+    font-family: "Raleway", sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    
+}
+
+.modules-list{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    color: white;
+    font-family: "Raleway", sans-serif;
+}
+
+span{
+    color: #1572B7;
+    font-family: "Raleway", sans-serif;
+}
+
+.module{
+    background-color: #252525;
+    border: 2px solid #33A8DB;
+    border-radius: 57px;
+    padding: 16px 127px;
+}
+
+#transform-world{
+    border-top: 2px solid #33A8DB;
+    border: 1px solid #33A8DB;
+    background-image: url(../images/woman-code.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    width: 100%;
+    height: 500px;
+}
+
+#transform-world p{
+    font-family: "Raleway", sans-serif;
+    font-weight: 900;
+    font-size: 40px;
+    color: #FFFFFF;
+    margin: 150px;
+    max-width: 250px;
+    text-transform: lowercase;
+    text-shadow: 3px 2px 0px #33A8DB ;
+
+}
+
+#professional-challenges{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#professional-challenges h2{
+    color: #33A8DB;
+    font-family: "Raleway", sans-serif;
+    font-weight: 700;
+    font-size: 32px;
+    letter-spacing: 10px;
+    max-width: 1000px;
+    text-align: center;
+    text-transform: uppercase;
+    margin: 60px 0 30px 0;
+}
+
+#professional-challenges p{
+    color: #ffffff;
+    font-family: "Raleway", sans-serif;
+    max-width: 792px;
+    font-weight: 400;
+    font-size: 16px;
+    text-align: center;
+    margin: 40px;
+}
+
+footer{
+    border-top: 2px solid #33A8DB;
+    height: 170px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: linear-gradient(180deg, rgba(51, 168, 219, 0) 0%, rgba(51, 168, 219, 0.2) 99.99%, rgba(51, 168, 219, 0.2) 100%);
+}
+
+footer img{
+    margin-top: 60px;
+}
+
+footer p{
+    font-family: "Raleway", sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: #ffffff;
+}
